# mutebot

./: .gitignore  CMakeLists.txt  README.md  cmdline.c  config.h.in  handlers.c  handlers.h  main.c  mutebot.h  tdutils.c  tdutils.h
arch/: .gitignore  PKGBUILD  default.conf  mutebot@.service  sysusers.conf  tmpfiles.conf
